vlib/v/scanner/tests/bin_consecutively_separator_err.vv
fn main() {
	_ := 0b_20
}
